--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "Counter({'loan_status': 1})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -748,7 +748,7 @@
     "# YOUR CODE HERE\n",
     "from imblearn.over_sampling import RandomOverSampler\n",
     "ros = RandomOverSampler(random_state=1)\n",
-    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "X_resampled, y_resampled = ros.fit_resample(X, y)\n",
     "Counter(y_resampled)\n",
     "# y_resampled\n",
     "# X_resampled.dtypes\n",
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,16 +772,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6573009382322703"
+       "0.6823445850197742"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,17 +796,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   72,    29],\n",
-       "       [ 6812, 10292]], dtype=int64)"
+       "array([[   74,    27],\n",
+       "       [ 6294, 10810]], dtype=int64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -830,10 +830,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.71      0.60      0.02      0.65      0.43       101\n",
-      "   low_risk       1.00      0.60      0.71      0.75      0.65      0.42     17104\n",
+      "  high_risk       0.01      0.73      0.63      0.02      0.68      0.47       101\n",
+      "   low_risk       1.00      0.63      0.73      0.77      0.68      0.46     17104\n",
       "\n",
-      "avg / total       0.99      0.60      0.71      0.75      0.65      0.42     17205\n",
+      "avg / total       0.99      0.63      0.73      0.77      0.68      0.46     17205\n",
       "\n"
      ]
     }
@@ -854,19 +854,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Resample the training data with SMOTE\n",
     "# YOUR CODE HERE\n",
     "from imblearn.over_sampling import SMOTE\n",
-    "x_resampled_smote, y_resampled_smote = SMOTE(random_state = 1, sampling_strategy='auto').fit_resample(X_train, y_train)"
+    "x_resampled_smote, y_resampled_smote = SMOTE(random_state = 1, sampling_strategy='auto').fit_resample(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,16 +879,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6622479600626106"
+       "0.6660505561781622"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,17 +901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   64,    37],\n",
-       "       [ 5288, 11816]], dtype=int64)"
+       "array([[   70,    31],\n",
+       "       [ 6174, 10930]], dtype=int64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -933,10 +933,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.63      0.69      0.02      0.66      0.44       101\n",
-      "   low_risk       1.00      0.69      0.63      0.82      0.66      0.44     17104\n",
+      "  high_risk       0.01      0.69      0.64      0.02      0.67      0.45       101\n",
+      "   low_risk       1.00      0.64      0.69      0.78      0.67      0.44     17104\n",
       "\n",
-      "avg / total       0.99      0.69      0.63      0.81      0.66      0.44     17205\n",
+      "avg / total       0.99      0.64      0.69      0.77      0.67      0.44     17205\n",
       "\n"
      ]
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,12 +975,12 @@
     "# YOUR CODE HERE\n",
     "from imblearn.under_sampling import ClusterCentroids\n",
     "cc = ClusterCentroids(random_state=1)\n",
-    "X_resampled_cc, y_resampled_cc = cc.fit_resample(X_train, y_train)"
+    "X_resampled_cc, y_resampled_cc = cc.fit_resample(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,16 +993,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5441784794709592"
+       "0.5615607836508627"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,17 +1015,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[   70,    31],\n",
-       "       [10343,  6761]], dtype=int64)"
+       "array([[  66,   35],\n",
+       "       [9071, 8033]], dtype=int64)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1047,10 +1047,10 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.69      0.40      0.01      0.52      0.28       101\n",
-      "   low_risk       1.00      0.40      0.69      0.57      0.52      0.27     17104\n",
+      "  high_risk       0.01      0.65      0.47      0.01      0.55      0.31       101\n",
+      "   low_risk       1.00      0.47      0.65      0.64      0.55      0.30     17104\n",
       "\n",
-      "avg / total       0.99      0.40      0.69      0.56      0.52      0.27     17205\n",
+      "avg / total       0.99      0.47      0.65      0.63      0.55      0.30     17205\n",
       "\n"
      ]
     }
@@ -1058,7 +1058,7 @@
    "source": [
     "# Print the imbalanced classification report\n",
     "# YOUR CODE HERE\n",
-    "print(classification_report_imbalanced(y_test, y_pred_cc))"
+    "print(classification_report_imbalanced(y_test, y_pred_cc))\n"
    ]
   },
   {
@@ -1080,93 +1080,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'loan_status': 1})"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "from imblearn.combine import SMOTEENN\n",
+    "smote_enn = SMOTEENN(random_state=0)\n",
+    "X_resampled_se, y_resampled_se = smote_enn.fit_resample(X, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(random_state=1)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "model = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "model.fit(X_resampled_se, y_resampled_se)\n",
+    "y_pred_se = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6400726134353378"
+       "0.644711676499736"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "balanced_accuracy_score(y_test, y_pred_se)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[  71,   30],\n",
-       "       [7232, 9872]])"
+       "array([[  73,   28],\n",
+       "       [7412, 9692]], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "confusion_matrix(y_test, y_pred_se)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1175,25 +1161,19 @@
      "text": [
       "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41       101\n",
-      "   low_risk       1.00      0.58      0.70      0.73      0.64      0.40     17104\n",
+      "  high_risk       0.01      0.72      0.57      0.02      0.64      0.42       101\n",
+      "   low_risk       1.00      0.57      0.72      0.72      0.64      0.40     17104\n",
       "\n",
-      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
+      "avg / total       0.99      0.57      0.72      0.72      0.64      0.40     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "print(classification_report_imbalanced(y_test, y_pred_se))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
